testsuite/tests/v1/patterns/complex/non_existing_selector/test.out
Error: Unknown symbol
   ╭─[ <working-dir>/script.lkql:2:27 ]
   │
 2 │ print(root is FooNode(any local_children is FooNode))
   │                           ───────┬──────  
   │                                  ╰──────── The symbol "local_children" cannot be resolved in the current scope
───╯
